# image_guided_coursework

./: README.md
3DSlicer/: CMakeLists.txt  README.md
3DSlicer/PathPlanning/: CMakeLists.txt  PathPlanning.py
3DSlicer/PathPlanning/Resources/UI/: PathPlanning.ui
IGTLink/: README.md
Ros2/: README.md
Ros2/my_neuro_arm_goal/: package.xml  setup.py
Ros2/my_neuro_arm_goal/launch/: my_neuro_arm_goal.launch.py  robotplan.launch.py
Ros2/my_neuro_arm_goal/my_neuro_arm_goal/: my_neuro_arm_goal_node.py  my_robot_goal.py
Ros2/my_neuro_arm_in_moveit/: CMakeLists.txt  package.xml
Ros2/my_neuro_arm_in_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  neuro_arm.ros2_control.xacro  neuro_arm.srdf  neuro_arm.urdf.xacro  ros2_controllers.yaml
Ros2/my_neuro_arm_in_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
Ros2/my_neuro_arm_urdf/: NeuroArm.urdf
