<?xml version="1.0"?>
<package format="3">
  <name>my_neuro_arm_goal</name>
  <version>0.0.0</version>
  <description>My custom package to control the neuro arm with MoveItPy</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>moveit_py</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
