<?xml version="1.0"?>
<package format="3">
  <name>my_neuro_arm_goal</name>
  <version>0.0.0</version>
  <description>My Neuro Arm Goal Python package</description>
  <maintainer email="awalkerperez@gmail.com">Andrea</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_py</depend>
  <depend>ros2_igtl_bridge</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
